refactor: remove the unessary get cart by id, and take it from the cleint requests.
