# src/main/kotlin/yadwy/app/yadwyservice/order/application/models/PlaceOrderRequest.kt
@@ -1,8 +1,20 @@
 package yadwy.app.yadwyservice.order.application.models
 
-/**
- * Request model for placing an order.
- */
+import yadwy.app.yadwyservice.order.domain.models.OrderSource
+import yadwy.app.yadwyservice.order.domain.models.PaymentMethod
+import yadwy.app.yadwyservice.order.domain.models.ShippingAddress
+
+
 data class PlaceOrderRequest(
-    val accountId: Long
+    val accountId: Long,
+    val source: OrderSource,
+    val items: List<OrderItemRequest>,
+    val shippingAddress: ShippingAddress,
+    val paymentMethod: PaymentMethod
+)
+
+data class OrderItemRequest(
+    val productId: Long,
+    val sellerId: Long,
+    val quantity: Int
 )
